try to fix the button size and margin on mobile.

--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ p {
     .row {
         width: 100%;
         max-width: 375px;
-        margin: 25px 5px 25px 5px;
+        margin: 25px 15px 25px 15px;
         border-radius: var(--corner-radius);
     }
 
@@ -185,7 +185,7 @@ p {
         height: 2em;
         font-family: var(--font-f1);
         font-size: 1.5em;
-        margin: 15% 15% 15% 0%;
+        margin: 15% 10% 15% 0%;
         border-radius: 2em;
     }
 
